# zeroshot-detect

./: .gitignore  .gitmessage  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: running-locally.md
docs/adr/: 0001-scope-and-model-choice.md  0002-detection-data-contract.md  0003-rendering-strategy.md  0004-ui-and-deployment.md  0005-non-max-suppression.md  README.md  TEMPLATE.md
docs/runs/: README.md
tests/: test_detector_contract.py  test_nms.py  test_rendering.py  test_types.py
zsdetect/: __init__.py  detector.py  nms.py  rendering.py  types.py
